--- a/docker/Dockerfile.cpu
+++ b/docker/Dockerfile.cpu
@@ -1,32 +1,25 @@
-# Use the official slim Python image
 FROM python:3.10-slim
 
-# Set working directory
 WORKDIR /app
-
-# Allow Fly (or any orchestrator) to override the port at build-time
-ARG PORT=8080
-ENV PORT=${PORT}
-
-# Make your src/ imports resolve
 ENV PYTHONPATH=/app/src
+ENV PORT=8080
 
-# System deps for PDF + images
+# install system deps
 RUN apt-get update \
  && apt-get install -y --no-install-recommends \
       build-essential gcc libjpeg-dev zlib1g-dev poppler-utils \
  && rm -rf /var/lib/apt/lists/*
 
-# Install Python packages
+# install Python deps
 COPY docker/requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir --upgrade pip setuptools wheel \
  && pip install --no-cache-dir -r /app/requirements.txt
 
-# Copy application code
+# copy source
 COPY src/ /app/src
 
-# Expose the dynamic port
-EXPOSE ${PORT}
+# tell Docker which port the app listens on
+EXPOSE 8080
 
-# Run Uvicorn on 0.0.0.0:$PORT
-CMD uvicorn api.main_pdf:app --host 0.0.0.0 --port $PORT --log-level debug
+# run Uvicorn on 0.0.0.0:$PORT
+CMD ["uvicorn", "api.main_pdf:app", "--host", "0.0.0.0", "--port", "8080", "--log-level", "info"]
