CI/CD for PDF & GPU image‐search services

--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -8,12 +8,6 @@ pydantic
 langchain>=0.1.14
 langchain-core>=0.1.47
 langchain-community>=0.0.21
-# langchain-openai
-# langchain-pinecone       # LangChain’s Pinecone wrapper
-# langchain-huggingface    # For HuggingFaceEmbeddings
-
-# ─── PINECONE (v3+) ──────────────────────────────────────────────────────────
-# pinecone-client>=3.0.0     # the official v3+ Python SDK
 pinecone
 
 # ─── EMBEDDINGS & LLMs ───────────────────────────────────────────────────────
@@ -26,15 +20,6 @@ PyMuPDF>=1.23.22
 pypdf
 unstructured[pdf]
 
-# ─── OPTIONAL TOOLS ──────────────────────────────────────────────────────────
-# (only if you actually need these)
-# transformers
-# numpy
-# faiss-cpu==1.7.2
-# torch==2.2.2
-# accelerate
-# einops
-
 # ─── API SERVER ──────────────────────────────────────────────────────────────
 fastapi
 uvicorn
@@ -43,3 +28,4 @@ httpx
 # ─── DEV & LINT ──────────────────────────────────────────────────────────────
 pytest
 flake8
+starlette
