--- a/docker/Dockerfile.cpu
+++ b/docker/Dockerfile.cpu
@@ -4,22 +4,27 @@ WORKDIR /app
 ENV PYTHONPATH=/app/src
 ENV PORT=8080
 
-# install system deps
+# ─── SYSTEM DEPENDENCIES ────────────────────────────────────────────────────────
 RUN apt-get update \
  && apt-get install -y --no-install-recommends \
       build-essential gcc libjpeg-dev zlib1g-dev poppler-utils \
  && rm -rf /var/lib/apt/lists/*
 
-# install Python deps
+# ─── COPY & INSTALL PYTHON DEPENDENCIES ─────────────────────────────────────────
 COPY docker/requirements.txt /app/requirements.txt
+
 RUN pip install --no-cache-dir --upgrade pip setuptools wheel \
+ && pip install --no-cache-dir \
+      torch==2.1.10+cpu \
+      torchvision==0.14.1+cpu \
+      torchaudio==0.10.1+cpu \
+      --index-url https://download.pytorch.org/whl/cpu/torch_stable.html \
  && pip install --no-cache-dir -r /app/requirements.txt
 
-# copy source
+# ─── COPY APP SOURCE ───────────────────────────────────────────────────────────
 COPY src/ /app/src
 
-# tell Docker which port the app listens on
-EXPOSE 8080
+# ─── PORT & ENTRYPOINT ─────────────────────────────────────────────────────────
+EXPOSE ${PORT}
 
-# run Uvicorn on 0.0.0.0:$PORT
-CMD ["uvicorn", "api.main_pdf:app", "--host", "0.0.0.0", "--port", "8080", "--log-level", "info"]
+CMD ["uvicorn", "api.main_pdf:app", "--host", "0.0.0.0", "--port", "${PORT}", "--log-level", "info"]
