CI/CD for PDF & GPU image‐search services

--- a/fly.toml
+++ b/fly.toml
@@ -30,3 +30,6 @@ primary_region = "ams"
     interval     = "10s"
     timeout      = "3s"
     grace_period = "60s"
+
+[machines]
+  vm_size = "shared-cpu-2x"
