--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -5,13 +5,13 @@ tiktoken>=0.6.0
 pydantic
 
 # ─── LANGCHAIN ECOSYSTEM ─────────────────────────────────────────────────────
-langchain>=0.1.14
-langchain-core>=0.1.47
-langchain-community>=0.0.21
-pinecone
+langchain>=0.1.62,<0.2
+langchain-core>=0.1.92,<0.2
+langchain-community>=0.0.47,<0.1.0
+pinecone-client>=2.2,<3
 
 # ─── EMBEDDINGS & LLMs ───────────────────────────────────────────────────────
-sentence-transformers>=2.2.2
+sentence-transformers>=2.2,<3
 openai>=1.13.3
 google-generativeai>=0.3.2
 
